# ape-dts

./: CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  README_ZH.md  databend_feat.md  log4rs.yaml
databend-common-ast/: Cargo.toml
databend-common-ast/tests/it/: ape_dts_parser.rs  main.rs
databend-common-ast/tests/it/ape-dts-testdata/: mysql-ddl.txt  pg-ddl.txt
dt-tests/: .env.ci  Cargo.toml  INTEGRATION_ISSUES.md  README.md  README_ZH.md  docker-compose.ci.yml  docker-compose.integration.yml  docker-compose.zk.yml
dt-tests/docker/mongo-init/: 20-create-mongo-dst-user.js  mongo-keyfile  start-mongo-rs.sh
dt-tests/docker/postgres-init/: 10-create-euc-cn-dbs.sql
dt-tests/scripts/: run-integration-tests.sh  zk_integration_test.sh
dt-tests/tests/: .env  test_config_util.rs
dt-tests/tests/log_reader/: log_reader_tests.rs
dt-tests/tests/mock_test/mysql_to_mysql/: snapshot_test.rs
dt-tests/tests/mock_test/mysql_to_mysql/8_0_to_8_0/: cdc_tests.rs
dt-tests/tests/mock_test/mysql_to_mysql/snapshot/: task_config.ini
dt-tests/tests/mock_test/pg_to_pg/: snapshot_test.rs
dt-tests/tests/mock_test/pg_to_pg/snapshot/: task_config.ini
dt-tests/tests/mongo_to_mongo/: cdc_tests.rs  check_tests.rs  review_tests.rs  revise_tests.rs  snapshot_tests.rs
dt-tests/tests/mysql_to_mysql/: cdc_tests.rs  check_tests.rs  snapshot_tests.rs  struct_tests.rs
dt-tests/tests/parallelizer/chunk_partitioner/: group_fast_path_result.md  group_fast_path_test.rs  mod.rs  partitioner_compare_result.md  partitioner_compare_test.rs  test_data.rs
dt-tests/tests/pg_to_pg/: cdc_tests.rs  check_tests.rs  snapshot_tests.rs  struct_tests.rs  tb_meta_tests.rs
dt-tests/tests/redis_to_redis/: cdc_cross_version_tests.rs  cdc_graph_tests.rs  mod.rs  snapshot_cross_version_tests.rs  snapshot_graph_tests.rs
dt-tests/tests/test_runner/: base_test_runner.rs  check_test_runner.rs  check_util.rs  mod.rs  mongo_check_test_runner.rs  mongo_test_runner.rs  rdb_check_test_runner.rs  rdb_clickhouse_test_runner.rs  rdb_cycle_test_runner.rs  rdb_kafka_rdb_test_runner.rs  rdb_redis_test_runner.rs  rdb_sql_test_runner.rs  rdb_struct_test_runner.rs  rdb_test_runner.rs  rdb_util.rs  redis_cluster_connection.rs  redis_statistic_runner.rs  redis_test_runner.rs  redis_test_util.rs  test_base.rs
dt-tests/tests/test_runner/mock_data/: constants.rs  mock_data.rs  mock_stmt.rs  mysql_type.rs  pg_type.rs
dt-tests/tests/test_runner/mock_utils/: constants.rs  mock_config.rs  mock_pg_type.rs  mock_stmt.rs  mod.rs  mysql_type.rs  pg_type.rs  random.rs
(+732 files in other folders)
