[package]
name = "databend-common-ast"
version = "0.2.1"
publish = true
description = "SQL parser for Databend"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/datafuselabs/databend/tree/main/src/query/ast"

[dependencies]
derive-visitor = { version = "0.4.0", features = ["std-types-drive"] }
educe = { version = "1.0.0", features = ["default", "full"], package = "databend_educe" }
enum-as-inner = "0.6"
ethnum = { version = "1.5.0" }
fast-float2 = "0.2.3"
fastrace = { version = "0.7.4", features = ["enable"] }
indent = "0.1.1"
itertools = "0.13.0"
logos = "0.12.1"
nom = "7.1.1"
nom-rule = "0.4"
ordered-float = { version = "4.5.0", default-features = false }
percent-encoding = "2.3.1"
pratt = "0.4.0"
pretty_assertions = "1.3.0"
recursive = "0.1.1"
rspack-codespan-reporting = "0.11"
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["preserve_order", "unbounded_depth"] }
strsim = "0.10"
strum = "0.24.1"
strum_macros = "0.24"
unindent = "0.2"
url = "2.5.4"

[dev-dependencies]
criterion = "0.5"
goldenfile = "1.4"

[[bench]]
name = "bench"
harness = false

# [lints]
# workspace = true
